# nasxx-beacon

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  beacon.h  beacon_mqtt.c  beacon_pairing.c  beacon_wifi.c  beacon_wol.c  main.c
